Correcao layout whatsapp estavel

--- a/templates/login.html
+++ b/templates/login.html
@@ -77,12 +77,13 @@
             </form>
             
             <div class="text-center mt-4 text-muted small">
-                Sistema de Ofertas v1.0
+                Sistema de Ofertas v2.0
             </div>
 
         </div>
     </div>
-</div>
+</div>close
+
 
 </body>
 </html>
