AJustando o nome CLOSE

--- a/templates/login.html
+++ b/templates/login.html
@@ -77,7 +77,7 @@
             </form>
             
             <div class="text-center mt-4 text-muted small">
-                Sistema de Ofertas v3.0
+                Sistema de Ofertas v - 3.0
             </div>
 
         </div>
